[gd_scene load_steps=9 format=2]

[ext_resource path="res://Components/Box/light.png" type="Texture" id=1]
[ext_resource path="res://Components/Box/bolt.png" type="Texture" id=2]
[ext_resource path="res://Components/Generator/generator.png" type="Texture" id=3]
[ext_resource path="res://Components/Generator/handle.png" type="Texture" id=4]
[ext_resource path="res://Components/Generator/Generator.gd" type="Script" id=5]
[ext_resource path="res://Components/Generator/start.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/light.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.8778, 47.6217 )

[node name="Generator" type="Sprite"]
light_mask = 2
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="HandleOff" type="Sprite" parent="."]
position = Vector2( -74.6448, -0.722534 )
texture = ExtResource( 4 )

[node name="HandleOn" type="Sprite" parent="."]
visible = false
position = Vector2( -74.6448, 14.7684 )
scale = Vector2( 1, -1 )
texture = ExtResource( 4 )

[node name="bolt" type="Sprite" parent="."]
position = Vector2( 46.5288, 17.2764 )
texture = ExtResource( 2 )

[node name="light" type="Sprite" parent="."]
modulate = Color( 0.2, 0.2, 0.2, 1 )
position = Vector2( -75.1286, 0.37993 )
scale = Vector2( 0.231209, 0.87175 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -72.0438, 6.52007 )
shape = SubResource( 1 )

[node name="TurnOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 7 )
color = Color( 0.207843, 0.756863, 1, 1 )
energy = 1.5
shadow_enabled = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
